# moabs

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  configure.ac  makefile
doc/: MOABS.html
lib/: Makefile.am
lib/gzstream/: Makefile
lib/samtools/: Makefile
src/: Makefile.am  makefile
src/ExactNumCI/: Makefile.am  makefile  makefile_static  numCI.cpp  stats.cpp  types.cpp  types.h
src/bseqc2/: Makefile.am  bseqc2.cpp  bseqc2mbiasplot.R
src/bsmap/: Makefile.am  README.txt  RELEASE.txt  align.cpp  dbseq.cpp  dbseq.h  main.cpp  makefile  makefile_static  pairs.h  param.cpp  param.h  reads.cpp  reads.h  utilities.h
src/bsmap/boost/: b2
src/bsmap/boost/bin.v2/: project-cache.jam
src/mcall/: Makefile.am  makefile  makefile_static  mcall.cpp  preprocess_novoalign.sh
src/mcomp/: Makefile.am  bbf.cpp  bbf.h  bbf_main.cpp  cmds.xt  fet2x2.cpp  fet2x2.h  fexact.c  fexact.h  fisher_exact_test.cpp  fisher_exact_test.h  hmm.cpp  hmm.h  lut.cpp  lut.h  makefile  makefile_static  mcomp.cpp  mcomp.cpp.if.make.failed.use.this.version.to.replace  mcomp.cpp.need.glibc.v2.16.to.compile  stats.cpp  stats.h  types.cpp  types.h
src/mcomp/lib/: build_stan.sh
src/mcomp/lib/stan/common/: command.hpp  run_markov_chain.hpp  write_iteration.hpp
src/mcomp/lib/stan/common/recorder/: csv.hpp
src/mcomp/lib/stan/io/: mcmc_writer.hpp
src/mcomp/lib/stan/services/: command.hpp
src/mcomp/lib/stan/services/mcmc/: run_markov_chain.hpp
src/pefilter/: Makefile.am  pefilter.cpp
test/: README.txt  dmc_M2_wt.G.bed_vs_ko.G.bed.bed  dmr_M1_wt.G.bed_vs_ko.G.bed.txt  dmr_M2_wt.G.bed_vs_ko.G.bed.txt  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.dmr  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.hmm  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.loc  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.region  ko.G.bed  ko_r1.bam  ko_r1.bam.G.bed  ko_r1.bam.bai  ko_r1.bam_stat.txt  ko_r2.bam  ko_r2.bam.G.bed  ko_r2.bam.bai  ko_r2.bam_stat.txt  ko_stat.txt  mytestrun.cfg  wt.G.bed  wt_r1.bam  wt_r1.bam.G.bed  wt_r1.bam.bai  wt_r1.bam_stat.txt  wt_r2.bam  wt_r2.bam.G.bed  wt_r2.bam.bai  wt_r2.bam_stat.txt  wt_stat.txt
test/invokeMcall/: comp.wt.vs.ko.txt.cvd.txt  dmc_M1_wt.G.bed_vs_ko.G.bed.bb  dmc_M1_wt.G.bed_vs_ko.G.bed.txt  dmc_M2_wt.G.bed_vs_ko.G.bed.txt  dmr_M2_wt.G.bed_vs_ko.G.bed.bed  dmr_M2_wt.G.bed_vs_ko.G.bed.temp  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.hmm  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.loc  invokeMcall.cfg  ko.G.bed  ko.chr10.bed  ko.chr18_strand.bed  ko_r1.bam  ko_r1.bam.G.bed  ko_r1.bam_stat.txt  ko_r2.bam  ko_r2.bam.G.bed  ko_r2.bam_stat.txt  ko_stat.txt  mytestrun.cfg  run.config.19495  run.config.19496  run.config.53540  run.config.53546  wt.G.bed  wt_r1.bam  wt_r1.bam.G.bed  wt_r1.bam_stat.txt  wt_r2.bam  wt_r2.bam.G.bed  wt_r2.bam_stat.txt  wt_stat.txt
test/invokeMcomp/: comp.wt.vs.ko.txt  dmc_M1_wt.G.bed_vs_ko.G.bed.bed  dmc_M2_wt.G.bed_vs_ko.G.bed.bb  dmr_M1_wt.G.bed_vs_ko.G.bed.bb  dmr_M1_wt.G.bed_vs_ko.G.bed.bed  dmr_M1_wt.G.bed_vs_ko.G.bed.temp  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.dmr  dmr_M3_wt.G.bed_vs_ko.G.bed.txt.region  invokeMcomp.cfg  ko.G.bed  mytestrun.cfg  run.config.19171  run.config.53682
test/preDefined/: CGI.bed  CGI.bed.AllCpgs.bed  CGI.bed.Inter.AllCpgs.bed  dmc_CGI.bed_0_vs_1.stat  dmc_M1_0_vs_1.bb  dmc_M1_0_vs_1.bed  dmc_M2_0_vs_1.bed  dmr_CGI.bed_0_vs_1.bb  dmr_CGI.bed_0_vs_1.bed  dmr_CGI.bed_0_vs_1.stat  dmr_CGI.bed_0_vs_1.txt  dmr_M1_0_vs_1.bb  dmr_M1_0_vs_1.bed  dmr_M1_0_vs_1.txt  dmr_M2_0_vs_1.bb  dmr_M2_0_vs_1.bed  dmr_M2_0_vs_1.txt  run.config.16745  run.config.54137
test/reScanDmr/: dmc_M2_0_vs_1.bed  dmc_M2_0_vs_1.txt  dmr_M2_0_vs_1.bb  dmr_M2_0_vs_1.bed  dmr_M2_0_vs_1.txt  run.config.15889
test/withVariance0/: comp.wt.vs.ko.txt  comp.wt.vs.ko.txt.cvd.txt  dmc_M1_wt.G.bed_vs_ko.G.bed.bed  dmc_M1_wt.G.bed_vs_ko.G.bed.txt  dmc_M2_wt.G.bed_vs_ko.G.bed.bed  dmc_M2_wt.G.bed_vs_ko.G.bed.txt  dmr_M1_wt.G.bed_vs_ko.G.bed.bed  dmr_M1_wt.G.bed_vs_ko.G.bed.txt  dmr_M2_wt.G.bed_vs_ko.G.bed.bed  dmr_M2_wt.G.bed_vs_ko.G.bed.txt  ko.G.bed  mytestrun.cfg  wt.G.bed
test/withVariance1/: comp.wiVar.txt  comp.wiVar.txt.cvd.txt  dmc_M1_wildtype_vs_knockout.bb  dmc_M1_wildtype_vs_knockout.bed  dmc_M1_wildtype_vs_knockout.txt  dmc_M2_wildtype_vs_knockout.bb  dmc_M2_wildtype_vs_knockout.bed  dmc_M2_wildtype_vs_knockout.txt  dmr_M1_wildtype_vs_knockout.bb  dmr_M1_wildtype_vs_knockout.bed  dmr_M1_wildtype_vs_knockout.txt  dmr_M2_wildtype_vs_knockout.bb  dmr_M2_wildtype_vs_knockout.bed  dmr_M2_wildtype_vs_knockout.txt  dmr_M3_wildtype_vs_knockout.txt.dmr  dmr_M3_wildtype_vs_knockout.txt.hmm  dmr_M3_wildtype_vs_knockout.txt.loc  dmr_M3_wildtype_vs_knockout.txt.region  knockout  ko_r1.bam.G.bed  ko_r2.bam.G.bed  run.config.52510  run.config.52603  wildtype  wt_r1.bam.G.bed  wt_r2.bam.G.bed
